upgrades
added endpoint to get materials by material type